--- a/src/globals.css
+++ b/src/globals.css
@@ -118,7 +118,10 @@
   }
 
   .user-grid {
-    @apply w-full grid grid-cols-1 xs:grid-cols-2 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-3 gap-7 max-w-5xl;
+    @apply w-full grid grid-cols-1 xs:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-3 gap-7 max-w-5xl;
+  }
+  .user-gridall {
+    @apply w-full  gap-7 max-w-5xl;
   }
 
   /* Explore */
